--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="游戏加速器,91天路,吃鸡加速器,河对岸,河对岸加速器,外网加速器,heduian.com,shadowsocks,代理,ss,科学上网,ss加速器">
+    <meta name="description" content="河对岸加速器，一站式的外网加速器，加速大量国内外应用，满足外贸从业者、IT科技工作者、海淘爱好者以及外游玩家等的外网加速服务需求">
+    <title>河对岸加速器 | 外网加速器</title>
+</head>
+<body>
 <a href="http://www.heduian.club" target="_blank">河对岸加速器官网</a>
+</body>
+</html>
