--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
 <a href="http://www.heduian.club" target="_blank">河对岸加速器官方网址</a>
+</br>
+</p>  
+<a href="https://williamszey.github.io/download.html" target="_blank">各平台软件下载</a>
+</p>  
 </body>
 </html>
