--- a/download.html
+++ b/download.html
@@ -8,6 +8,8 @@
 <body>
 <a href="https://williamszey.github.io/win/Shadowsocks-win10.exe" target="_blank">windows 软件下载</a>
 </p>  
+<a href="https://williamszey.github.io/win/NDP462-KB3151800-x86-x64-AllOS-ENU" target="_blank">windows .net Frame下载</a>
+</p>  
 <a href="https://williamszey.github.io/mac/heduian_mac.dmg" target="_blank">Mac 软件下载</a>
 </p>  
 <a href="https://williamszey.github.io/android/shadowsocks-nightly-3.4.2-6.apk" target="_blank">Android 软件下载</a>
