--- a/download.html
+++ b/download.html
@@ -8,7 +8,7 @@
 <body>
 <a href="https://williamszey.github.io/win/Shadowsocks-win10.exe" target="_blank">windows 软件下载</a>
 </p>  
-<a href="https://williamszey.github.io/win/NDP462-KB3151800-x86-x64-AllOS-ENU" target="_blank">windows .net Frame下载</a>
+<a href="https://williamszey.github.io/win/NDP462-KB3151800-x86-x64-AllOS-ENU.exe" target="_blank">windows .net Frame下载</a>
 </p>  
 <a href="https://williamszey.github.io/mac/heduian_mac.dmg" target="_blank">Mac 软件下载</a>
 </p>  
