--- a/u973hx2nx.html
+++ b/u973hx2nx.html
@@ -1,3 +1,11 @@
+
+<!DOCTYPE html>
+<html lang="en">
+<head >
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-type" content="application/json; charset=UTF-8"/>
+</head>
+<body>
 {
 	data:{
 		host:"47.74.187.155"
@@ -5,3 +13,5 @@
 	msg:"success",
 	code:"1"
 }
+</body>
+</html>
