--- a/u973hx2nx.html
+++ b/u973hx2nx.html
@@ -1,17 +1,10 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head >
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-type" content="application/json; charset=UTF-8"/>
-</head>
-<body>
 {
 	data:{
-		host:"47.74.187.155"
+		host:"47.74.187.155",
+		"configVersion":"1.0.0",
+		"configUrl":"https://williamszey.github.io/wing.conf"
 	},
 	msg:"success",
 	code:"1"
 }
-</body>
-</html>
