--- a/u973hx2nx.html
+++ b/u973hx2nx.html
@@ -1,10 +1,2 @@
 
-{
-	data:{
-		host:"47.74.187.155",
-		"configVersion":"1.0.0",
-		"configUrl":"https://williamszey.github.io/wing.conf"
-	},
-	msg:"success",
-	code:"1"
-}
+{data:{host:"47.74.187.155","configVersion":"1.0.0","configUrl":"https://williamszey.github.io/wing.conf"},msg:"success",code:"1"}
