--- a/download.html
+++ b/download.html
@@ -14,7 +14,7 @@
 </p>  
 <a href="https://williamszey.github.io/android/shadowsocks-nightly-3.4.2-6.apk" target="_blank">Android 软件下载</a>
 </p>  
-<a href="http://www.heduian.club" target="_blank">iPhone 软件下载</a>
+<a href="https://itunes.apple.com/hk/app/openwingy/id1294672758?mt=8" target="_blank">iPhone 软件下载</a>
 <a href="https://itunes.apple.com/hk/app/openwingy/id1294672758?mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/zh-cht/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
 </body>
 </html>
