--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>河对岸加速器官方网址 | 外网加速器</title>
 </head>
 <body>
-<a href="http://www.heduian.club" target="_blank">河对岸加速器官方网址</a>
+<a href="http://www.heduian.info" target="_blank">河对岸加速器官方网址</a>
 </br>
 </p>  
 <a href="https://williamszey.github.io/download.html" target="_blank">各平台软件下载</a>
