--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>河对岸加速器官方网址 | 外网加速器</title>
 </head>
 <body>
+	<script type="text/javascript">
+    //3秒钟之后跳转到指定的页面
+    setTimeout(window.location.href='http://www.heduian.info',6);
+</script>
+6秒后即将跳转到河对岸官网...</br>
 <a href="http://www.heduian.info" target="_blank">河对岸加速器官方网址</a>
 </br>
 </p>  
