--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 	<script type="text/javascript">
     //3秒钟之后跳转到指定的页面
-    setTimeout(window.location.href='http://www.heduian.info',10);
+    setTimeout(window.location.href='http://www.heduian.live',10);
 </script>
 10秒后即将跳转到河对岸官网...</br>
-<a href="http://www.heduian.info" target="_blank">河对岸加速器官方网址</a>
+<a href="http://www.heduian.live" target="_blank">河对岸加速器官方网址</a>
 </br>
 </p>  
 <a href="https://williamszey.github.io/download.html" target="_blank">各平台软件下载</a>
