--- a/u973hx2nx.html
+++ b/u973hx2nx.html
@@ -1,2 +1,1 @@
-
-{data:{host:"47.74.187.155","configVersion":"1.0.0","configUrl":"https://williamszey.github.io/wing.conf"},msg:"success",code:"1"}
+{data: {host: "http://207.148.66.113/app/",configVersion: "0.4",configUrl: "https://williamszey.github.io/wing.conf"},msg: "success",code: "1"}
