--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     var oriUrl = window.location.href;
 
     var newUrlBase = "http://www.heduian.live/?aff=";
-    var url =  newUrlBase.concat(getQueryString(aff, oriUrl));
+    var url =  newUrlBase.concat(getQueryString("aff", oriUrl));
     alert(url);
     setTimeout(window.location.href=url,3);
 
@@ -25,7 +25,6 @@
     }
 
 </script>
-10秒后即将跳转到河对岸官网...</br>
 <a href="http://www.heduian.live" target="_blank">河对岸加速器官方网址</a>
 </br>
 </p>  
