--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript">
     //3秒钟之后跳转到指定的页面
     var oriUrl = window.location.href;
+    alert(oriUrl);
 
     var newUrlBase = "http://www.heduian.live/?aff=";
     var url =  newUrlBase.concat(getQueryString("aff", oriUrl));
