--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript">
     //3秒钟之后跳转到指定的页面
     var oriUrl = window.location.search;
-    var newUrlBase = "http://www.heduian.live/?aff=";
+    var newUrlBase = "http://www.heduian.mobi/";
     var url =  newUrlBase.concat(getQueryString("aff", oriUrl));
     setTimeout(window.location.href=url,3);
 
@@ -23,7 +23,7 @@
     }
 
 </script>
-<a href="http://www.heduian.live" target="_blank">河对岸加速器官方网址</a>
+<a href="http://www.heduian.mobi" target="_blank">河对岸加速器官方网址</a>
 </br>
 </p>  
 <a href="https://williamszey.github.io/download.html" target="_blank">各平台软件下载</a>
