--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
     <meta name="baidu-site-verification" content="MvsH0duaRl" />
     <meta name="keywords" content="游戏加速器,91天路,吃鸡加速器,河对岸,河对岸加速器,外网加速器,heduian.com,shadowsocks,代理,ss,科学上网,ss加速器">
     <meta name="description" content="河对岸加速器，一站式的外网加速器，加速大量国内外应用，满足外贸从业者、IT科技工作者、海淘爱好者以及外游玩家等的外网加速服务需求">
-    <meta http-equiv="refresh" content="0;url=http://www.heduian.mobi/">
+    <meta http-equiv="refresh" content="0;url=http://www.heduian.vip/">
     <title>河对岸加速器官方网址 | 外网加速器</title>
 </head>
 <body>
 	<script type="text/javascript">
     //3秒钟之后跳转到指定的页面
+	var oriUrl = window.location.search;
+    var newUrlBase = "http://heduian.vip/";
+    var url =  newUrlBase.concat(getQueryString("aff", oriUrl));
+    setTimeout(window.location.href=newUrlBase,3);
+
+    function getQueryString(name, str) {
+    var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
+    var r = str.match(reg);
+    if (r != null) return unescape(r[2]); return null;
+    }
 </script>
-<a href="http://heduian.mobi" target="_blank">河对岸加速器官方网址</a>
+<a href="http://heduian.vip" target="_blank">河对岸加速器官方网址</a>
 </br>
 </p>  
 <a href="https://williamszey.github.io/download.html" target="_blank">各平台软件下载</a>
