--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="baidu-site-verification" content="MvsH0duaRl" />
     <meta name="keywords" content="游戏加速器,91天路,吃鸡加速器,河对岸,河对岸加速器,外网加速器,heduian.com,shadowsocks,代理,ss,科学上网,ss加速器">
     <meta name="description" content="河对岸加速器，一站式的外网加速器，加速大量国内外应用，满足外贸从业者、IT科技工作者、海淘爱好者以及外游玩家等的外网加速服务需求">
-    <meta http-equiv="refresh" content="0;url=http://www.heduian.xyz/">
+   <!-- <meta http-equiv="refresh" content="0;url=http://www.heduian.xyz/">-->
     <title>河对岸加速器官方网址 | 外网加速器</title>
 </head>
 <body>
@@ -22,7 +22,8 @@
     if (r != null) return unescape(r[2]); return null;
     }
 </script>
-<a href="http://heduian.xyz" target="_blank">河对岸加速器官方网址</a>
+<!--<a href="http://heduian.xyz" target="_blank">河对岸加速器官方网址</a>-->
+<label style="size: 48">网站维护中,请稍后再试</label>
 </br>
 </p>  
 <a href="https://williamszey.github.io/download.html" target="_blank">各平台软件下载</a>
