--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script type="text/javascript">
     //3秒钟之后跳转到指定的页面
 	var oriUrl = window.location.search;
-    var newUrlBase = "http://heduian.xyz/";
+    var newUrlBase = "http://www.heduian.xyz/";
     var url =  newUrlBase.concat(getQueryString("aff", oriUrl));
     setTimeout(window.location.href=newUrlBase,3);
 
