--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="L-9mQb8W4Pa98ui_8MX58aONzsjPCiObg4HnubGq1vY" />
     <meta name="baidu-site-verification" content="MvsH0duaRl" />
     <meta name="keywords" content="河对岸加速器,河对岸云服务, 河对岸">
-    <meta name="description" content="河对岸云服务，加速大量国内外应用，满足外贸从业者、IT科技工作者、海淘爱好者以及外游玩家等的网络加速服务需求">
+    <meta name="description" content="河对岸云服务，游戏加速器">
     <!--<meta http-equiv="refresh" content="0;url=http://www.heduian.top/">-->
     <title>河对岸加速器|河对岸云服务</title>
 </head>
@@ -42,7 +42,6 @@
 <a href="http://www.heduian.top/" target="_blank">河对岸加速器官方网址</a>
 </br>
 </p>  
-<a href="https://williamszey.github.io/download.html" target="_blank">各平台软件下载</a>
 </p>  
 </body>
 </html>
