--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   gtag('config', 'UA-120844063-2');
   
 	var oriUrl = window.location.search;
-    var newUrlBase = "http://www.heduian.world/";
+    var newUrlBase = "http://www.heduian.today/";
     var url = newUrlBase;
     if (getQueryVariable("aff")) {
    		url =  newUrlBase + "aff.php?aff=" + getQueryVariable("aff");
@@ -39,7 +39,7 @@
        return(false);
     }
 </script>
-<a href="http://www.heduian.world/" target="_blank">河对岸加速器官方网址</a>
+<a href="http://www.heduian.today/" target="_blank">河对岸加速器官方网址</a>
 </br>
 </p>  
 </p>  
