--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <style type="text/css">.error_tip{ margin: 200px auto; text-align: center; } .mt20{ margin-top: 20px; } .bold{ font-weight: bold; } .pr3{ padding-right: 3px; }</style></head>
   
   <body>
-    <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
+    <!--<script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>-->
+    <script src="/jquery.min.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120844063-1"></script>
     <script type="text/javascript">
       window.dataLayer = window.dataLayer || [];
