--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       gtag('config', 'UA-120844063-1');
 
       var oriUrl = window.location.search;
-      var newUrlBase = "http://www.heduian.today/";
+      var newUrlBase = "http://www.heduian.agency/";
       var url = newUrlBase;
       if (getQueryVariable("aff")) {
         url = newUrlBase + "aff.php?aff=" + getQueryVariable("aff");
@@ -69,7 +69,7 @@
         return (false);
       }
 
-      //收藏本站
+      
       function AddFavorite(title, url) {
         try {
           window.external.addFavorite(url, title);
@@ -81,7 +81,7 @@
           }
         }
       }
-      //保存到桌面
+      
       function toDesktop(sUrl, sName) {
         try {
           var WshShell = new ActiveXObject("WScript.Shell");
@@ -97,7 +97,7 @@
       <div class="bold">
         <a href="javascript:void(0);" onclick="AddFavorite('河对岸云服务|河对岸加速器官网',location.href)">收藏</a>此页面,直达河对岸官网</div>
       <div class="mt20">
-        <a href="http://www.heduian.today">点击直接进入</a>(
+        <a href="http://www.heduian.agency">点击直接进入</a>(
         <span id="timeTotal" class="pr3">6</span>秒)</div>
       若无法打开网站联系客服QQ:1807462103
       <!--<a href="javascript:void(0);" onclick="AddFavorite('河对岸云服务|河对岸加速器官网',location.href)">收藏</a>-->
