--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="L-9mQb8W4Pa98ui_8MX58aONzsjPCiObg4HnubGq1vY" />
     <meta name="baidu-site-verification" content="LGjL3htUuf" />
     <meta name="keywords" content="河对岸加速器,河对岸云服务, 河对岸">
-    <meta name="description" content="河对岸云服务，加速大量国内外应用，满足外贸从业者、IT科技工作者、海淘爱好者以及外游玩家等的网络加速服务需求">
+    <meta name="description" content="河对岸云服务,游戏加速">
     <title>河对岸加速器官网|河对岸云服务</title>
     <style type="text/css">.error_tip{ margin: 200px auto; text-align: center; } .mt20{ margin-top: 20px; } .bold{ font-weight: bold; } .pr3{ padding-right: 3px; }</style></head>
   
@@ -100,8 +100,7 @@
         <a href="http://www.heduian.agency">点击直接进入</a>(
         <span id="timeTotal" class="pr3">6</span>秒)</div>
       若无法打开网站联系客服QQ:1807462103
-      <!--<a href="javascript:void(0);" onclick="AddFavorite('河对岸云服务|河对岸加速器官网',location.href)">收藏</a>-->
-      <!--<a href="javascript:void(0);" onclick=" toDesktop(location.href，'河对岸云服务')">保存到桌面</a>--></div>
+</div>
   </body>
 
 </html>
