--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="L-9mQb8W4Pa98ui_8MX58aONzsjPCiObg4HnubGq1vY" />
     <meta name="baidu-site-verification" content="LGjL3htUuf" />
-    <meta name="keywords" content="河对岸加速器,河对岸云服务, 河对岸">
+    <meta name="keywords" content="河对岸加速器,河对岸云服务,河对岸官网,河对岸">
     <meta name="description" content="河对岸云服务,游戏加速">
-    <title>河对岸加速器官网|河对岸云服务</title>
+    <title>河对岸加速器官网|河对岸云服务|河对岸官网</title>
     <style type="text/css">.error_tip{ margin: 200px auto; text-align: center; } .mt20{ margin-top: 20px; } .bold{ font-weight: bold; } .pr3{ padding-right: 3px; }</style></head>
   
   <body>
