--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="description" content="河对岸云服务">
     <title>河对岸云服务|河对岸官网</title>
     <style type="text/css">.error_tip{ margin: 200px auto; text-align: center; } .mt20{ margin-top: 20px; } .bold{ font-weight: bold; } .pr3{ padding-right: 3px; }</style></head>
+    <META HTTP-EQUIV="pragma" CONTENT="no-cache"> 
+	<META HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
+	<META HTTP-EQUIV="expires" CONTENT="0">
   
   <body>
     <!--<script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>-->
@@ -25,8 +28,8 @@
       var oriUrl = window.location.search;
       var newUrlBase = "http://www.heduian.services/";
       var url = newUrlBase;
-      if (getQueryVariable("aff")) {
-        url = newUrlBase + "aff.php?aff=" + getQueryVariable("aff");
+      if (getQueryVariable("code")) {
+        url = newUrlBase + "auth/register?code=" + getQueryVariable("code");
         window.location.href = url;
       } else {
         //var url =  newUrlBase + getQueryVariable("aff");//getQueryString("aff", oriUrl);//newUrlBase.concat(getQueryString("aff", oriUrl));
@@ -34,7 +37,7 @@
         //setTimeout(window.location.href=url,3);
         //
         function gotoIndex() {
-          location = url; // 换成自己的首页地址  
+          location = url;  
         };
 
         $(function() {
@@ -98,7 +101,7 @@
         <a href="javascript:void(0);" onclick="AddFavorite('河对岸云服务|河对岸官网',location.href)">收藏</a>此页面,直达河对岸官网</div>
       <div class="mt20">
         <a href="http://www.heduian.services">点击直接进入</a>(
-        <span id="timeTotal" class="pr3">6</span>秒)</div>
+        <span id="timeTotal" class="pr3">3</span>秒)</div>
 </div>
   </body>
 
