--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         //alert(url);
         //setTimeout(window.location.href=url,3);
         //
+        window.location.href = url;
         function gotoIndex() {
           location = url;  
         };
