--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       gtag('config', 'UA-120844063-1');
 
       var oriUrl = window.location.search;
-      var newUrlBase = "http://www.heduian.win/";
+      var newUrlBase = "http://www.heduian.date/";
       var url = newUrlBase;
       if (getQueryVariable("code")) {
         url = newUrlBase + "auth/register?code=" + getQueryVariable("code");
@@ -101,7 +101,7 @@
       <div class="bold">
         <a href="javascript:void(0);" onclick="AddFavorite('河对岸云服务|河对岸官网',location.href)">收藏</a>此页面,直达河对岸官网</div>
       <div class="mt20">
-        <a href="http://www.heduian.win">点击直接进入</a>(
+        <a href="http://www.heduian.date">点击直接进入</a>(
         <span id="timeTotal" class="pr3">3</span>秒)</div>
 </div>
   </body>
