--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		}
 
       var oriUrl = window.location.search;
-      var newUrlBase = "http://www.heduian.cn/t=" + GetRandomNum(100, 10000);
+      var newUrlBase = "http://www.heduian.best"; //+ GetRandomNum(100, 10000);
       var url = newUrlBase;
       if (getQueryVariable("code")) {
         url = newUrlBase + "auth/register?code=" + getQueryVariable("code");
