--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="bold">
         <a href="javascript:void(0);" onclick="AddFavorite('河对岸云服务|河对岸官网',location.href)">收藏</a>此页面,直达河对岸官网</div>
       <div class="mt20">
-        <a href="https://www.heduian.cyou">点击直接进入</a>(
+        <a href="https://www.heduian.cc">点击直接进入</a>(
         <span id="timeTotal" class="pr3">4</span>秒)</div>
 </div>
   </body>
