--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		}
 
       var oriUrl = window.location.search;
-      var newUrlBase = "https://www.heduian.pro"; //+ GetRandomNum(100, 10000);
+      var newUrlBase = "https://www.heduian.fun"; //+ GetRandomNum(100, 10000);
       var url = newUrlBase;
       if (getQueryVariable("code")) {
         url = newUrlBase + "auth/register?code=" + getQueryVariable("code");
