--- a/index.html
+++ b/index.html
@@ -31,17 +31,11 @@
 		}
 
       var oriUrl = window.location.search;
-      var newUrlBase = "https://heduian.town"; //+ GetRandomNum(100, 10000);
+      var newUrlBase = "https://heduian.ws"; //+ GetRandomNum(100, 10000);
       var url = newUrlBase;
       if (getQueryVariable("code")) {
         url = newUrlBase + "auth/register?code=" + getQueryVariable("code");
-        //window.location.href = url;
       } else {
-        //var url =  newUrlBase + getQueryVariable("aff");//getQueryString("aff", oriUrl);//newUrlBase.concat(getQueryString("aff", oriUrl));
-        //alert(url);
-        //setTimeout(window.location.href=url,3);
-        //
-        //window.location.href = url;
         function gotoIndex() {
           location = url;  
         };
@@ -106,7 +100,7 @@
       <div class="bold">
         <a href="javascript:void(0);" onclick="AddFavorite('河对岸云服务|河对岸官网',location.href)">收藏</a>此页面,直达河对岸官网</div>
       <div class="mt20">
-        <a href="https://heduian.town">点击直接进入</a>(
+        <a href="https://heduian.ws">点击直接进入</a>(
         <span id="timeTotal" class="pr3">4</span>秒)</div>
 </div>
   </body>
